*Empty MediaWiki Message*

--- a/Heliand.mw
+++ b/Heliand.mw
@@ -1,12 +1,12 @@
 [[Bestaand:Heliand Cgm 25.JPG|thumb|Pagina üüt et Münchener handskrivt (Bayrische Staatsbibliothek)]]
-[[Bestaand:Berlin heliand.jpg|thumb|Berlyns fragment (Staatsbibliothek zu Berlin)]]
-De '''Heliand''' is een rilligyöse heldendicht over et leven van [[Jezus Christus|Jesüs Kristüs]] en is eskreven in et [[Oldsaksisch|Oldsaksisk]], ümstreks 825 nå Kristüs. 
+[[Bestaand:Berlin heliand.jpg|thumb|Berlynsk fragment (Staatsbibliothek zu Berlin)]]
+De '''Heliand''' is een religiöse heldendicht oaver et leaven van [[Jezus Christus|Jesus Christus]] en is eskreaven in et [[Oldsaksisch|Oldsassisk]], ümstreaks 825 nå Christus. 
 
-De name ''Heliand'', dat pas 1830 döör gelearden so enüümd wörden, is Oldsaksisk vöör et Düütse en Nederlandse 'heyland' ov 'redder'. Et is et ynige üüt-ebreyde dichterye dat in et Oldsaksisk is over-eleaverd. Et bestyt üüt 5983 allitererende varsen en is nyt helemåle kompleet. 
+De name ''Heliand'', dat pas 1830 döär geleyrden so enöömd wördden, is oldsassisk vöär et düütske en neaderlandske 'heiland' of 'redder'. Et is et eynige uutebreyde dichterye dat in et oldsassisk is oavereleavered. Et besteyt uut 5983 allitereyrende varsen en is neyt heylemåle kompleyt. 
 
-De tekse van de heldendåd is bewård ebleven in vyr geskrivten: twee gröttere, de codex Můnchen Cgm 25 (bekend as M ov Monacensis, üüt de negende ewe) en in de British Library, de Codex Cottonianus Caligula A. VII (bekend as C, tynde ewe), en dårby twee lösse stükken, dy nu op de Universiteyt van [[Praag]] ligt en in et [[Vaticaanstad|Vaticaan]]. Van et Cotton manuscript wördt an-enömmen dat et in Engeland eskreven is.
+De tekste van de heldendåd is bewård ebleyven in veer geskrivten: twey groutere, de codex Můnchen Cgm 25 (bekend as M of Monacensis, uut de neagende eywe) en in de British Library, de Codex Cottonianus Caligula A. VII (bekend as C, teende eywe), en dårby twey lösse stükken, dee nu up de Universiteit van [[Praag]] ligget en in et [[Vaticaanstad|Vatikaan]]. Van et Cotton manuscript wördt anenöämen dat et in Engeland eskreaven is.
 
-De eerste Nederlandse vertaling van de Heliand kwamp in 2006 üüt en wörden emaakt döör Jaap van Vredendaal, een kenner van et Oldgermaans. Teoloog [[Willem van der Meiden]] hölpen hüm dåran med. In meey 2012 kwamen der een ryge büke üüt van de Heliand in vyre [[Nedersaksisch|Neersaksiske]] vertalingens. Een [[Grunnegs|Grönniger]] wörden emaakt döör [[Sies Woltjer]], de [[Twents|Twentsen]] döör [[Anne van der Meiden]] en [[Harry Morshuis]], de [[Achterhooks|Achterhuuksen]] döör [[Henk Krosenbrink]] en [[Henk Lettink]] en de [[Westfaals|Münstersen]] döör [[Hannes Demming]]. De büke wörden üüt-egeven döör [[TwentseWelle]], med dårby een nye wetenskoppelike üütgave van de originele tekse van de Heliand döör [[Tim Sodmann]].
+De eyrste neaderlandske vertaling van de Heliand kwamt in 2006 uut en wördden emaked döär Jaap van Vredendaal, een wysepüte van et oldgermaansk. Teoloog [[Willem van der Meiden]] hülpen hüm dåran med. In meyi 2012 kwamen der een ryge böke uut van de Heliand in veer [[Nedersaksisch|neadersassiske]] vertalings. Een [[Grunnegs|grönniger]] wördden emaked döär [[Sies Woltjer]], de [[Twents|twentsken]] döär [[Anne van der Meiden]] en [[Harry Morshuis]], de [[Achterhooks|ochterhooksken]] döär [[Henk Krosenbrink]] en [[Henk Lettink]] en de [[Westfaals|Münstersen]] döär [[Hannes Demming]]. De böke wördden uutegeaven döär [[TwentseWelle]], med dårby een nye weatenskoppelike uutgave van de origineyle tekste van de Heliand döär [[Tim Sodmann]].
 
 == Vöörbeeldtekste ==
 Fragment üüt de Heliand, op een heldendådige wyse is hyr de eerste varsen üüt et tweede höövdstük van et [[Evangelie noar Lukas|Lükas Evangely]] nåverteld:
