*Empty MediaWiki Message*

--- a/Heliand.mw
+++ b/Heliand.mw
@@ -8,32 +8,32 @@ De tekste van de heldendåd is bewård ebleyven in veer geskrivten: twey grouter
 
 De eyrste neaderlandske vertaling van de Heliand kwamt in 2006 uut en wördden emaked döär Jaap van Vredendaal, een wysepüte van et oldgermaansk. Teoloog [[Willem van der Meiden]] hülpen hüm dåran med. In meyi 2012 kwamen der een ryge böke uut van de Heliand in veer [[Nedersaksisch|neadersassiske]] vertalings. Een [[Grunnegs|grönniger]] wördden emaked döär [[Sies Woltjer]], de [[Twents|twentsken]] döär [[Anne van der Meiden]] en [[Harry Morshuis]], de [[Achterhooks|ochterhooksken]] döär [[Henk Krosenbrink]] en [[Henk Lettink]] en de [[Westfaals|Münstersen]] döär [[Hannes Demming]]. De böke wördden uutegeaven döär [[TwentseWelle]], med dårby een nye weatenskoppelike uutgave van de origineyle tekste van de Heliand döär [[Tim Sodmann]].
 
-== Vöörbeeldtekste ==
-Fragment üüt de Heliand, op een heldendådige wyse is hyr de eerste varsen üüt et tweede höövdstük van et [[Evangelie noar Lukas|Lükas Evangely]] nåverteld:
+== Vöärbealdtekste ==
+Fragment uut de Heliand, up een heldendådige wyse is hyr de eyrste varsen uut et tweyde höävdstük van et [[Evangelie noar Lukas|Lukas Evangely]] nåvertelled:
 
 {|style="padding:20pt; background-color:#EEEEEE; margin:5pt 0pt 5pt 0pt"
 |-
-| ''Thô uuard fon Rûmubúrg rîkes mannes'' ||To richten de rykskeerl vanüüt Romebürg,
+| ''Thô uuard fon Rûmubúrg rîkes mannes'' ||To richeden de rykskearl vanuut Romebürg,
 |-
-| ''bar alla thesa irminthiod Octaviânas'' ||Octavyanus, an alle volker
+| ''bar alla thesa irminthiod Octaviânas'' ||Oktavianus, an alle volker
 |-
-| ''ban endi bodskepi obar thea is brêdon giwald'' ||een ban en bosskop, wied verspreyd
+| ''ban endi bodskepi obar thea is brêdon giwald'' ||een ban en bosskop, wyd verspreid
 |-
-| ''cuman fon them kêsure cuningo gihuilicun,'' ||döör de keyser verkondigd an de köningen in syn ryk:
+| ''cuman fon them kêsure cuningo gihuilicun,'' ||döär de keiser verkündigd an de köäningen in syn ryk:
 |- 
-| ''hêmsitteandiun sô wîdo sô is heritogon'' ||inhymse vörsten, hertogen dy oaveral
+| ''hêmsitteandiun sô wîdo sô is heritogon'' ||inheymse vorsten, hertogen den oaveral
 |-
 | ''obar al that landskepi liudio giweldun.'' ||in wyde gewesten et bewind hadden.
 |-
-| ''Hiet man that alla thea elilendiun man iro ôdil sôhtin,'' ||Wy günder verbleven, mos syn arvguud süken,
+| ''Hiet man that alla thea elilendiun man iro ôdil sôhtin,'' ||Wee günder verbleaven, mos syn arvgood söyken,
 |-
-| ''helidos iro handmahal angegen iro hêrron bodon,'' ||in syn gebyd verskynen vuur de boden van sienen here.
+| ''helidos iro handmahal angegen iro hêrron bodon,'' ||in syn gebeed verskynen vöär de boaden van ear heyr.
 |-
-| ''quâmi te them cnôsla gihue, thanan he cunneas was,'' ||yderyne günk når de streke wår as syn volk votkwamp,
+| ''quâmi te them cnôsla gihue, thanan he cunneas was,'' ||ydereyne güng når de streake wår as syn volk vordkwamt,
 |-
-| ''giboran fon them burgiun. That gibod ward gilêstid'' ||når de bürg van syn geböörte. Når dat gebod wörden elüsterd
+| ''giboran fon them burgiun. That gibod ward gilêstid'' ||når de bürg van syn geboarte. Når dat gebod wördden elüstered
 |-
-| ''obar thesa wîdon werold.'' ||in de wyde weerld.
+| ''obar thesa wîdon werold.'' ||in de heyle wyde wearld.
 |}
 
 == Üütgånde verwysingen ==
