*Empty MediaWiki Message*

--- a/Heliand.mw
+++ b/Heliand.mw
@@ -36,7 +36,7 @@ Fragment uut de Heliand, up een heldendådige wyse is hyr de eyrste varsen uut e
 | ''obar thesa wîdon werold.'' ||in de heyle wyde wearld.
 |}
 
-== Üütgånde verwysingen ==
+== Uutgånde verwysingen ==
 *[http://wikisource.org/wiki/Heliand Heliand op Wikisource]
 
 {{Dialekt|sdz}}
