*Empty MediaWiki Message*

--- a/Heliand.mw
+++ b/Heliand.mw
@@ -27,7 +27,7 @@ Fragment uut de Heliand, up een heldendådige wyse is hyr de eyrste varsen uut e
 |-
 | ''Hiet man that alla thea elilendiun man iro ôdil sôhtin,'' ||Wee günder verbleaven, mos syn arvgood söyken,
 |-
-| ''helidos iro handmahal angegen iro hêrron bodon,'' ||in syn gebeed verskynen vöär de boaden van ear heyr.
+| ''helidos iro handmahal angegen iro hêrron bodon,'' ||in ear gebeed verskynen vöär de boaden van ear heyr.
 |-
 | ''quâmi te them cnôsla gihue, thanan he cunneas was,'' ||ydereyne güng når de streake wår as syn volk vordkwamt,
 |-
