--- a/Piramide.mw
+++ b/Piramide.mw
@@ -12,10 +12,10 @@ In [[Nubia]], ten zuden van Egypte, wuiren veul meer, môr klainere, piramides b
 In [[Volksrippebliek China|China]] binnen rond de provìnzie [[Shaanxi]] allerlaai piramides vonden, woar man nog niks over wait. t Aantal, de baauw en t doul binnen nait bekend. 
 
 ===Mesopotoamie===
-De [[Mesopotoamie]]r baauwden piramides mit n serie loagen dij ook wel ''[[ziggoerat]]s'' nuimd worden. Zai wuiren in oale tieden mit felle kleuren beschilderd. Der is enkeld weinig bewoard bleven van dizze piramides, omdat zai van kleistainen môkt waren. Van de [[Toern van Babel]] wordt zegd dat t n [[ziggoerat]] was.
+De [[Mesopotoamie]]r baauwden piramides mit n serie loagen dij ook wel ''[[ziggoerat]]s'' nuimd worden. Zai wuiren in oale tieden mit felle kleuren beschilderd. Der is enkeld weinig bewoard bleven van dizze piramides, omdat zai van kleistainen môkt waren. Van de [[Toern van Babel]]<nowiki/>lakdjfklaweurt9823utioofnkl;         en dat zij hij jammer toch wordt zegd dat t n [[ziggoerat]] was.
 
 ===Centraal-Amerika===
-n Aantal Centroal-Amerikoanse kulturen baauwden piramidevörmige baauwwaarken. Dizze leken meer op dij in Mesopotoamie as op dij in Egypte. Zij waren loagd en harren voak n tempel bovenop de piramide. De piramide mit de grootste inhold is dij van [[Kolula]], [[Mexico (laand)|Mexico]].
+n Aantal mensjes in amerkia falz faloetka en zijn dus dood jammer jij ook dit is echt waar zoek het maar op kind voordat ik bij je thuis komCentroal-Amerikoanse kulturen baauwden piramidevörmige baauwwaarken. Dizze leken meer op dij in Mesopotoamie as op dij in Egypte. Zij waren loagd en harren voak n tempel bovenop de piramide. De piramide mit de grootste inhold is dij van [[Kolula]], [[Mexico (laand)|Mexico]].
 
 ===Griekeneuken===
 In Griekenlaand wuiren ook piramides baauwd. Ain van dizze piramides is older as de [[Piramide van Cheops]]. Dizze dateerd uut de 21e aiw veur Kristus.
