*Empty MediaWiki Message*

--- a/Heliand.mw
+++ b/Heliand.mw
@@ -2,7 +2,7 @@
 [[Bestaand:Berlin heliand.jpg|thumb|Berlynsk fragment (Staatsbibliothek zu Berlin)]]
 De '''Heliand''' is een religiöse heldendicht oaver et leaven van [[Jezus Christus|Jesus Christus]] en is eskreaven in et [[Oldsaksisch|Oldsassisk]], ümstreaks 825 nå Christus. 
 
-De name ''Heliand'', dat pas 1830 döär geleyrden so enöömd wördden, is oldsassisk vöär et düütske en neaderlandske 'heiland' of 'redder'. Et is et eynige uutebreyde dichterye dat in et oldsassisk is oavereleavered. Et besteyt uut 5983 varsen en is eskreaven as [[stavrym]]. Et is neyt heylemåle kompleyt. 
+De name ''Heliand'', dat pas 1830 döär geleyrden so enöömd wördden, is oldsassisk vöär et düütske en neaderlandske 'heiland' of 'redder'. Et is et eynige uutebreyde dichterye dat in et oldsassisk is oavereleavered. Et besteyt uut 5983 varsen en is eskreaven in [[stavrym]]. Et is neyt heylemåle kompleyt. 
 
 De tekste van de heldendåd is bewård ebleyven in veer geskrivten: twey groutere, de codex Můnchen Cgm 25 (bekend as M of Monacensis, uut de neagende eywe) en in de British Library, de Codex Cottonianus Caligula A. VII (bekend as C, teende eywe), en dårby twey lösse stükken, dee nu up de Universiteit van [[Praag]] ligget en in et [[Vaticaanstad|Vatikaan]]. Van et Cotton manuscript wördt anenöämen dat et in Engeland eskreaven is.
 
