--- a/Anarcho-primitivisme.mw
+++ b/Anarcho-primitivisme.mw
@@ -1,4 +1,6 @@
-'''Anarchoprimitivisme''' is 'n anarchistiese kritiek op de oorsprung en veuruutgaank van de beschaving. Volngs 't anarchoprimitivisme gaf de verschoeving van t [[jager-verzamelaar]]- naor laandbouw-bestaon anleiding töt verdeling van de bevolking in sociaaln klassn, onderdrukking en vervrömming. Anarchoprimitivisten pleit veur 'n terugge keer naor 'n onbeschaafn meniere van leewm deur middel van ont-industrialisatie, ofschaffing van arbeidsverdeling of spesjalisatie, en 't ofstaand nemmn van grootschaolige organisatietechnologien. D'r bestaot ok aandere, niet-anarchistiese variaantn van 't primitivisme, en nie alle primitivisn wiest 'tzölfde verschiensel an as de bronne van de huudige beschavingsprobleemn.
+'''Anarchoprimitivisme''' is et idey dat mensken et vöär dat ze landbouw begünnen et med mekare vöäl beater hadden en good med de natuur ümme eer hen samen leavden. De denkers van disse strouming bint der van oavertüügt dat toon mensken as [[jager-verzamelaar|jagers en gadderaars]] oavergüngen når landbouwers, dat et allemåle de verkeyrde kante up güngen. Van vrye deren wördden sy mensken dee sich up eyne steade setten, wår der verdeyling van de sociale klassen, underdrükking en vervrömding van kwam. Anarcho
+
+Anarchoprimitivisten pleit veur 'n terugge keer naor 'n onbeschaafn meniere van leewm deur middel van ont-industrialisatie, ofschaffing van arbeidsverdeling of spesjalisatie, en 't ofstaand nemmn van grootschaolige organisatietechnologien. D'r bestaot ok aandere, niet-anarchistiese variaantn van 't primitivisme, en nie alle primitivisn wiest 'tzölfde verschiensel an as de bronne van de huudige beschavingsprobleemn.
 
 Veul traditionele anarchistn verwarpt de kritiek op de beschaving, waorbi'j völle ontkent dat anarchoprimitivisme iets te maakn hef met anarchisme, terwel sommign, zo as Wolfi Landstreicher, die kritiek wel onderschrieft, mar zichzölf nie as anarchoprimitivisn beschouwt. Anarchoprimitivistn wörd vake kenmarkt deur hun gerichtheid op 't daodwarklik bereikn van 'n netuurlike toestaand deur ''verwildering''.
 
