--- a/Blokgooien.mw
+++ b/Blokgooien.mw
@@ -1,5 +1,5 @@
 [[File:Blokgooien spel.jpg|thumb|Blok met fiches en koegel]]
-'''''Blokgooien''''' is een typisch [[Drèents|Dreins]] boetenspel wat nog speuld wor op het Moltmaokersstuk naobij [[Alteveer (Noordenveld)]] op e haeide in 't zuden van [[Roon]] en bij het Westerveen in Peest. <ref>[http://www.peest.eu/blokgooien-2018.html Blokgooiers Peest]</ref> In Roon speult ze um 2-eurocentmun'ies. Zie speult ok met iezern koegels in stee van stienen vlinten en zie hebt plastic cent'ies maokt veur op het blok. In Roon gaon ze dreimaol in de week (maondag, dinsdag en dunnerdag) hèn te blokgooien, van 13.30 uur tot 15.00 uur. Umdat ze in Roon metgaon bint met de tied, neuim'n ze't spellegie ok wal 'levend arfgoed', en daormet bint ze dan ok op e liest kommen van de ''Nationale Inventaris Immaterieel Cultureel Erfgoed in Nederland'' 
+'''''Blokgooien''''' is een typisch [[Drèents|Dreins]] boetenspel wat nog speuld wor op het Moltmaokersstuk naobij [[Alteveer (Noordenveld)]] op e haeide in 't zuden van [[Roon]] en bij het Westerveen in Peest. <ref>[http://www.peest.eu/blokgooien-2018.html Blokgooiers Peest]</ref> In Roon speult ze um 2-eurocentmun'ies. Zie speult ok met iezern koegels in stee van stienen vlinten en zie hebt plastic cent'ies maokt veur op het blok. In Roon gaon ze dreimaol in de week (maondag, dinsdag en dunnerdag) hèn te blokgooien, van 13.30 uur tot 15.00 uur. Umdat ze in Roon metgaon bint met de tied, neuim'n ze't spellegie ok wal 'levend arfgoed.
 
 == Dreinse benaomingen en identiteit ==
 [[File:Let.jpg|thumb|Het Dreinse woord 'let' is van de letter W van keuning Willem I, op een cent'ie van vroouger.]]
