*Empty MediaWiki Message*

--- a/Vleadermuse.mw
+++ b/Vleadermuse.mw
@@ -1,7 +1,7 @@
-'''Vleermuze''' (orde Chiroptera, ok wel haandvlöggelign enuumd) bint zoogdiern die echt vliegn könt (das aans as zweevn). Heur vleugels hebt 'n vlieghuud die tussen de tengels van heur veur- en achterpeute en heur stat zit. Der bint völle soortn vleermuze. Eankele zeldzame soortn komt allinnig op iene plekke veur, vake in grottn. Weerldwied bint der zo bettie 1.100 soortn, doorvan kump dat der meer as iene op de vieve zoogdiersoortn 'n vleermoes is.
+'''Vleadermuse''' (orde Chiroptera, ouk wel handvlöägeligen enöömd) bint soagderen dee echt vlegen künnet (dat is anders as sweaven). Ear vlöägels hebbet een vleeghüüd dee tüsken de tengels van ear vöär- en achterpöyte en ear start sit. Der bint vöäle soorten vleadermuse. Enkele seldzame soorten kummet alleynig up eyne plekke in vöär, vake in grotten. Wearldwyd bint der so beatyn 1.100 soorten, dårvan kümt dat der meyr as eyne up de vyve soagdeersoortn een vleadermuus is.
 
-==Leefgebied==
-Vleermuze komt overal op d' weerld veur behoalve in de poolcirkel. In de Tropiese gebiedn kump meer soortn vleermuze veur as dat in koaldere gebiedn zo as Nederlaand. Dat kump deurdat in de troopn der meer insektn te vindn bint. De mieste vleermuze leeft 't Amazone reegnwoald in en in zuudoost-Azië. De oaldste vleermoes is evundn in de Verienigde Stoatn. Hum leefdn zo bettie 50 miljoen joar eleedne. En in Duutslaand 1 van oongeveer 45 miljoen joar eleedn eleefd hebt. Mangs bint ze zo goed bewoard ebleevn da'ze in 'n darms dode insektn evundn hebt. 
+==Leavgebeed==
+Vleadermuse kummet oaveral up de wearld vöär behalve in de poalcirkel. In de tropiske gebeden kummet meyr soorten vleadermuse vöär as dat in koldere gebeden so as Neaderland. Dat kümt döärdat in de tropen der meyr insekten te vinden bint. De meyste vleadermuse leevet in et Amazone reagenwold in en in süüdoust-Asy. De oldste vleadermuus is evünden in de Vereynigde Ståten. Hüm leavden so beatyn 50 miljoon jår eleadene. En in Düütskland eyne van ungevear 45 miljoon jår eleadene eleaved hebbet. Mangs bint se so good bewård ebleaven dat se in den darms doude insekten evünden hebbed. 
 
 ==Echolokatie==
 Vleermuze kunt wal kiekn mar nie genog umme ’s nachns te jaagn. Ze kiekt dan met heur oorn. Dat doet ze met de echolokatie. Deur met zien tonge te klikkn stöt 'e geluudn uut. Die kaatst weerumme. Zo kan de vleermoes psies heurn woar as de veurwarpn bint, de richting, de ofstaand, de grootte, en 'n vörm, of 't beweg, of 't glad is of ruuw is. Deur echolokatie könt ze ok de ofstaand van 'n aandern vleermoes mettn. Deur echolokatie könt ze 'n beeld kriegn van 'n prooi in 't duuster, woordeur ze 't vangn könt
