*Empty MediaWiki Message*

--- a/Ilse_DeLange.mw
+++ b/Ilse_DeLange.mw
@@ -1,6 +1,6 @@
 [[Ofbeelding:2018-05-21 Ilse DeLange-9271.jpg|thumb|Ilse DeLange]] 
 
-'''''Ilse DeLange''''' is de artistename van '''Ilse Annoeska de Lange''' ([[Almelo]], [[13 mei|13 mei]] [[1977]]), ne [[Nederlaand|neaderlandske]] [[zanger|sangeresse]]. Sy wun in 2004 en 2009 nen [[Edison Music Awards|Edison]] en öäre albums bereiken meyr as tyn keyr [[Platina (muziek)|platina]].
+'''''Ilse DeLange''''' is de artistename van '''Ilse Annoeska de Lange''' ([[Almelo]], [[13 mei|13 mei]] [[1977]]), ne [[Nederlaand|neaderlandske]] [[zanger|sangeresse]]. Sy wün in 2004 en 2009 nen [[Edison Music Awards|Edison]] en öäre albums bereikeden meyr as teen keyr [[Platina (muziek)|platina]].
 
 ==Diskografy==
 
