*Empty MediaWiki Message*

--- a/De_Pluus.mw
+++ b/De_Pluus.mw
@@ -1,8 +1,8 @@
 [[Bestaand:Engbertsdijksvenen-natuur-OpenTopo.jpg|{{largethumb}}|kaarte van de Plüüs, uut december 2015]]
 
-'''De Plüüs''' ([[Nederlaands|Neaderlands]]: Engbertsdijksvenen) is een natüürgebeed in [[Oaveriessel|Overyssel]], by [[Kloosterhaar]] up et ousten van [[Westerhaar-Vrieznvensewiek|Westerhaar-Vreysenveynsewyke]] kört by de Düütske grense. Ståtsbosbeheyr hevt et gebeed up beheyr. Et is üm en nåby 1000 hektare groot.
+'''De Plüüs''' ([[Nederlaands|neaderlandsk]]: Engbertsdijksvenen) is een natuurgebeed in [[Oaveriessel|Oaveryssel]], by [[Kloosterhaar]] up et ousten van [[Westerhaar-Vrieznvensewiek|Westerhaar-Vresenveansewyke]] kört by de düütske grense. Ståtsbosbeheyr hevt et gebeed up beheyr. Et is üm en nåby 1000 hektare grout.
 
-De Plüüs besteet uut [[Heed (vegetasie)|heyde]] en [[vennen]]. Et is wat oaver is van wat een grote veynemooras ewest hevt, wat vöäreyr et noordousten van Neaderland bedekten. Ümdat dit eyne van de lätste plaatsen is in Neaderland wår as nog hoogveyne te vinden is, wörd et as van een grote natüürwaerde eseen. Et gebeed is op-enöämen in [[Natura 2000]], wår as alle belangryke beskarmde natüürgebeden in [[Uropa|Europa]] by ståt.
+De Plüüs besteet uut [[Heed (vegetasie)|heide]] en [[vennen]]. Et is wat oaver is van wat een groyte vennemooras ewesd hevt, wat vöäreyr et noordousten van Neaderland bedekden. Ümdat dit eyne van de lätste plaatsen is in Neaderland wår as noch hougvenne te vinden is, wörd et as van een groute natuurwaerde eseen. Et gebeed is up-enöämen in [[Natura 2000]], wår as alle belangryke beskarmde natuurgebeden in [[Uropa|Europa]] by ståt.
  
 {{Dialekt|sdz}}
 
