--- a/Hardenbarg_(stad).mw
+++ b/Hardenbarg_(stad).mw
@@ -113,7 +113,7 @@ Et blad [[Cobouw]] döäd in 2015 een verkysing 'Lelijkste Bouwwerk van Nederlan
 Et is dan ouk een uutdagend bowsel, vöäral vöär de wat konservative Hardenbargers. in 2012 was et klår. Et wördt vandage an de dag in de volksmond noch ''de Puuste'' enöömd, üm syn bollige vörme en de geale-etter klöäre.
 
 ==Taal==
-Up den Hardenbarg wördt döär de meyste lüde [[neadersassisk]] espröäken, de tweyde taal is [[neaderlandsk]]. Alhowel de jögend der al wat minder an med doot, een stükkyn minder as de ümliggende dörpyens. De variant wat in den Hardenbarg espröäken wördt, wörd et [[Vechtdals]] enöömd, ümdat den Hardenbarg ouk an de Vechte ligt. De pråterye is årdig gelyke is med dat wat der up ümringende dörpyns, as [[Banthum|Banthüm]] en [[Ommen]], ehöyrd wördt.
+Up den Hardenbarg wördt döär de meyste lüde [[neadersassisk]] espröäken, de tweyde taal is [[neaderlandsk]]. Alhowel de jögend der al wat minder an med doot, een stükkyn minder as jögend uut de ümliggende dörpyns. De variant van et neadersassisk wat in den Hardenbarg espröäken wördt, wörd et [[Vechtdals]] enöömd, ümdat den Hardenbarg ouk an de Vechte ligt. De pråterye is årdig gelyke med dat wat der in ümliggende steades, as [[Banthum|Banthüm]] en [[Ommen|Ummen]], ehöyrd wördt.
 
 ==Referentys==
 <references/>
