*Empty MediaWiki Message*

--- a/Hardenbarg_(stad).mw
+++ b/Hardenbarg_(stad).mw
@@ -100,12 +100,12 @@ Sinds 1905 hevt Hardenbarg een eigen treinstation. Et hüdige stationsgebouw sta
 * [[Casper Boom]] (1980), korvballer, [[Wereldkampioenschap korfbal 2007|wearldkampioon 2007]]<ref>[https://web.archive.org/web/20090623101040/http://www.korfballeague.nl/speler.asp?Id=74 Websteade Korfbal League]</ref>
 * [[Thijs Bouma]] (1992), vootballer
 
-==Rörig den Hardenbarg==
-In de jåren '70 en '80, vöärige eeuwe, was den Hardenbarg dé uutgånsplekke van noordoust-Oaveryssel. Van Zwolle, Almelo, Drente en alle kanten kwamen hyr jung volk sich supen en (vöäral) brekken. Et was hen- en werden loupen van jung volk in de wekenden. De stad barstede van de diskoteken en krogen. Mar dat is de lätste jåren slim achteruut egån. Et bint nu merendeels winkels ewörden. 
+==Röärig den Hardenbarg==
+In de jåren 70. en 80., vöärige eywe, was den Hardenbarg dé uutgånsplekke van noordoust-Oaveryssel. Van Swolle, Almelo, Drente en alle kanten kwamen hyr jungvolk sich supen en (vöäral) brekken. Et was hen- en werden loupen van jungvolk in de wekkenden. De stad barstede van de diskoteken en krogen. Mar dat is de lätste jåren slim achteruut egån. Et bint nu meyrendeals winkels ewörden. 
 
-Gewoonlik güng et spül 2:00 uur allemåle dichte, end jåren '70. En al et besöäpen volk güngen noch in et centrum hen donderjagen en brekken. De undernemmers wördden dår nyt good van. Düs vanof eerste wekke december '79 mossen de krogen, vanuut de börgemeyster, de tente 00:30 uur dichte doon. Düs anderhalv uur eerder as vöärhen. Dat hebt de krooggangers nyt mooy evünden. De wekenden dårup hebt der slimme rellen in et centrum ewest. Groute grupen krooggangers -teagen de dusend an- dy et upnamen teagen de policy, dy med verstarkede manskappen med knüppels en skilden (de ME) an mossen treaden. Völle undernemmers mossen ankyken ho as ear winkels kapot emaked wördden. Flink wat stynen vlöägen döär de ruten, policyautos up de kante, vüürwark wördden der gooyt, mensen söchtede een veylig henkummen, jung volk dy et asfalt van dichteby mochtede bekyken, stråten wördden der of-eset en et verkeer ümmeleyded, de börgermeyster mos vöär et leaven uutkyken en et hele centrum stünden up synen kop. 'Hardenberg, slachtveld' spröäken de kranten dervan. Wekende dårup kwamen der spandoken an te pas én völle pottenkykers. Et güngn wear net so an as de wekke dervöär. Mar de policy was nu wat better vöärbereyded. Et wekende dårup was et ytsys rüstiger. Döär et harde uptreaden van de policy, en et jung volk dy sich toch mar evven achter de ouren krabbede, was et nu wal edån med et groutste gedonder. Diskoteek The City slöäten sich de döären, töt sich de rüste in den Hardenbarg terüggekeerde.
+Gewoonlik güng et spül 2:00 uur allemåle dichte, end jåren '70. En al et besöäpen volk güngen noch in et centrum hen dunderjagen en brekken. De undernemmers wördden dår neet good van. Düs vanof eyrste wekke december 79. mossen de krogen, vanuut de bürgemeister, de tente 00:30 uur dichte doon. Düs anderhalv uur eyrder as vöärhen. Dat hebbet de krooggangers neet mooi evünden. De wekkenden dårup hebbed der slimme rellen in et centrum ewesd. Groute grupen krooggangers -teagen de dusend an- de et upnöämen teagen de polity, dee med verstarkede manskappen med knüppels en skilden (de ME) an mossen treaden. Vöäle undernemmers mossen ankyken ho as ear winkels kapot emaked wördden. Flink wat steynen vlöägen döär de ruten, polityautos up de kante, vüürwark wördden der egooit, mensken söchden een veilig henkummen, jungvolk dee et asfalt van körtby möchden bekyken, stråten wördden der of-eset en et verkeyr ümmeleided, de bürgermeister mos vöär et leaven uutkyken. Düs et heyle centrum stünden een settyn up synen kop. 'Hardenberg, slachtveld' spröäken de kranten dervan. Wekkende dårup kwamen der spandoken an te pas én vöäle pottenkykers. Et güngen wear net so an as de wekke dervöär. Mar de polity was nu wat better vöärbereid. Et wekkende dår wear up was et ytsys kalmer. Döär et harde uptreaden van de policy, en et jungvolk dee sich toch mar eaven achter de oren krabden, was et nu wal edån med et groutste gedunder. Diskoteek The City slöäten sich de döären, töt sich de rüste in den Hardenbarg terüggekeyrden.
 
-==Gemeentehuus den Hardenbarg==
+==Gemeyndehuus den Hardenbarg==
 In 2010 was de olde gemeentehuus van Hardenbarg eslouped, en in etsölvde jår wördden de eerste styn vöär et nye gemeentehuus elegd. Et gemeentehuus is een untwarp van büro de Architekten Cie, dat ouk de uutbreyding van de Tweede Kamer untwörpen. De gemeente wolden et meest 'duurzame gebouw van Nederland' hebben. 
 
 Et blad [[Cobouw]] döäd in 2015 een verkysing 'Lelijkste Bouwwerk van Nederland', wårin söäven gebowen enomineerd wördden. Wårunder et nye gemeentehuus van Hardenbarg. In totaal hebt der wat meer as 5000 stemmen uutebracht west. Et Hardenbarger gemeentehuus kreeg, med de meerderheyd an stemmen van 58%, uutendelik de titel ''Lelijkste Bouwwerk van Nederland 2010-2015''.
