*Empty MediaWiki Message*

--- a/Bargeyk.mw
+++ b/Bargeyk.mw
@@ -52,7 +52,7 @@ De gemeenderåd vöär 2018-2022 wörd anvored döär ne koality van et [[CDA]] 
 
 ==Verwysingen==
 <references/>
-{{Commonscatklein|Bergeijk}}
+{{Commonscat|Bergeijk}}
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Gemeente in Noord-Broabant]]
