--- a/Ynys_Môn.mw
+++ b/Ynys_Môn.mw
@@ -1,3 +1,3 @@
-'''Ynys Môn''' ([[ingelsk]]: ''Anglesey'') is dat grötste eiland van [[Wales]].
+'''Ynys Môn''' ([[ingelsk]]: ''Anglesey'') is en eiland an de noordwestküste van [[Kymrien]] un ouk dat grötste eiland van Kymrien.
 
 {{Dialekt|nns||Nysassiske Skryvwyse}}
