*Empty MediaWiki Message*

--- a/Determinisme.mw
+++ b/Determinisme.mw
@@ -1,5 +1,5 @@
 '''Determinisme''' is in de [[filosofie|filosofy]] de andüding vöär et idey dat alles wat der is en wat der geböärt kümt danks oorsake-gevolg. Yts is so as et is, ümdat de geböärtenisse te vöärend dat so bepåled hevt. Alles wörd döär de vöärige geböärtenisse bepåld en niks steyt lös in et geheyl. De geböärtenissen nú skikt wear wat der hyrnå sol kummen. Et eyne ding brengt et andere vöärd. By summige denkers geyt dat so verre dat mensken heylemåle niks geyn vrye wille hebbet, mar underheavig bint an de gang van alles. Vrye wille besteyt düs neet. 
 
-Een bekenden determinist is [[Baruch Spinoza]]. Den, as jöde, güng God verbindden med (de) natuur. Hy had et dan ouk neet van God as een persone, mar skreav ait: ''God/Natuur''.
+Een bekenden determinist is [[Baruch Spinoza]]. Den, as jöyde, güng God verbindden med (de) natuur. Hy had et dan ouk neet van God as een persone, mar skreav ait: ''God/Natuur''.
 
 {{Dialekt|sdz}}[[Kategorie:filosofie]]
