*Empty MediaWiki Message*

--- a/Utopie.mw
+++ b/Utopie.mw
@@ -1,7 +1,7 @@
-'''Utopie''' is 'n terme dat veurkump in de skrieveri-je en de fillesofie. 't Wörd umskreevm as 'n ''onmeugelike warkelikheid', ofwal 'n weerld die helemoale goed is, mar nooit warklik zol kunnen bestoan. Et teegnoavergestelde van utopie is [[dystopie]].
+'''Utopie''' is 'n terme dat veurkump in de skrieveri-je en de fillesofie. 't Wörd umskreevm as 'n ''onmeugelike warkelikheid'', ofwal 'n weerld die helemoale goed is, mar nooit warklik zol kunnen bestoan. Et teegnoavergestelde van utopie is [[dystopie]].
 
 't Woord kump uut 't Grieks en hef 'n veurvoegsel wa'j dubbel kunt gebruukn: ''ou-topos'' betekkend 'n niet-bestoande plaatse, én eu-topos betekkend 'n ''goeie en glukkige saamleving''.
 
-In de meeste skrieveri-je -veural sir Thomas More, met zien boek Utopia, den as de terme ok bedacht hef- is 'n saamleving dat in 'n utopie lef, in de toekumts, woar as de technologie 't meansvolk gliekweerdig is, alle huze en stroatn bint 'tzölfde en giene hef 'n eign eingdom. Vake dus arg socialistisch en communistisch. Mar iej hebt der ok wal wat skrievers bi-j, die as 'n weerld beskreewn hebt die in 't verlidden is. Zoas Rousseau, den zich veurstellen dat meansen vrogger leevn as gelieke an aandre diern. Dee meansen hadden gien geneul met wark, sosjale verplichtings en ok mar muuilike gevulens. Töt dat iene van eer zee dat 'n stuk laand -wat 'e umtuunt har- van húm was en giene aans. Toen is t gedonder begunt.
+In de meeste skrieveri-je -veural [[Sir Thomas More]], met zien boek Utopia, den as de terme ok bedacht hef- is 'n saamleving dat in 'n utopie lef, in de toekumts, woar as de technologie 't meansvolk gliekweerdig is, alle huze en stroatn bint 'tzölfde en giene hef 'n eign eingdom. Vake dus arg socialistisch en communistisch. Mar iej hebt der ok wal wat skrievers bi-j, die as 'n weerld beskreewn hebt die in 't verlidden is. Zoas [[Rousseau]], den zich veurstellen dat meansen vrogger leevn as gelieke an aandre diern. Dee meansen hadden gien geneul met wark, sosjale verplichtings en ok mar muuilike gevulens. Töt dat iene van eer zee dat 'n stuk laand -wat 'e umtuunt har- van húm was en giene aans. Toen is t gedonder begunt.
 
 {{Dialekt|sdz}}
