*Empty MediaWiki Message*

--- a/Utopie.mw
+++ b/Utopie.mw
@@ -1,4 +1,4 @@
-'''Utopie''' is 'n terme dat veurkump in de skrieveri-je en de fillesofie. 't Wörd umskreevm as 'n ''onmeugelike warkelikheid'', ofwal 'n weerld die helemoale goed is, mar nooit warklik zol kunnen bestoan. Et teegnoavergestelde van utopie is [[dystopie]].
+'''Utopie''' is 'n terme dat veurkump in de [[Literatuur|skrieveri-je]] en de [[Filesefie|levensbeskouwing]]. 't Wörd umskreevm as 'n ''onmeugelike warkelikheid'', ofwal 'n weerld die helemoale goed is, mar nooit warklik zol kunnen bestoan. Et teegnoavergestelde van utopie is [[dystopie]].
 
 't Woord kump uut 't Grieks en hef 'n veurvoegsel wa'j dubbel kunt gebruukn: ''ou-topos'' betekkend 'n niet-bestoande plaatse, én eu-topos betekkend 'n ''goeie en glukkige saamleving''.
 
