--- a/Utopie.mw
+++ b/Utopie.mw
@@ -1,7 +1,7 @@
-'''Utopie''' is 'n terme dat veurkump in de [[Literatuur|skrieveri-je]] en de [[Filesefie|levensbeskouwing]]. 't Wörd umskreevm as 'n ''onmeugelike warkelikheid'', ofwal 'n weerld die helemoale goed is, mar nooit warklik zol kunnen bestoan. Et teegnoavergestelde van utopie is [[dystopie]].
+'''Utopy''' is een term dat vöärkümt in de [[Literatuur|skryverye]] en de [[Filesefie|leavensbeskouwing]]. Et wörd ümskreaven as een ''unmöägelike warkelikheid'', ofwal een wearld dee heylemåle good is, mar noit warkelik sol künnen bestån. Et teagenoavergestelde van utopy is [[dystopy]].
 
-'t Woord kump uut 't Grieks en hef 'n veurvoegsel wa'j dubbel kunt gebruukn: ''ou-topos'' betekkend 'n niet-bestoande plaatse, én eu-topos betekkend 'n ''goeie en glukkige saamleving''.
+Et woord kümt uut et greeksk en hevt een vöärvoogsel wat y dubbel gebruken künt: ''ou-topos'' beteakend een neet-bestånde plaatse, én eu-topos beteskend een ''gode en gelükkige samenleaving''.
 
-In de meeste skrieveri-je -veural [[Sir Thomas More]] met zien boek Utopia, den as de terme ok bedacht hef- is 'n saamleving dat in 'n utopie lef, in de toekumts, woar as de technologie 't meansvolk gliekweerdig is, alle huze en stroatn bint 'tzölfde en giene hef 'n eign eingdom. Vake dus arg socialistisch en communistisch. Mar iej hebt der ok wal wat skrievers bi-j, die as 'n weerld beskreewn hebt die in 't verlidden is. Zoas [[Jean-Jacques Rousseau]], den humzölf veurstellen dat meansen vrogger leevn as gelieke an aandre diern. Dee meansen hadden gien geneul met wark, sosjale verplichtings en ok mar muuilike gevulens. Töt dat iene van eer zee dat 'n stuk laand -wat 'e umtuunt har- van húm was en giene aans. Toen is t gedonder begunt.
+In de meyste skryverye -vöäral [[Sir Thomas More]] med syn book Utopia, den as de term ouk bedached hevt- is een samenleaving dat in een utopy levt, in de tookumts, wår as de technology et menskvolk gelykwaerdig is, alle hüse en stråten bint etsülvde en geyne hevt een eigen eigendom. Vake düs arg [[socialisme|socialistisk]] en [[communisme|kommunistisk]]. Mar y hebt der ouk wal wat skryvers by, dee as een wearld beskreavden hebbet dee in et verleaden is. So as [[Jean-Jacques Rousseau]], den hümsülv vöärstellen dat mensken vroager leavden as gelyke an andere deren. Dee mensken hadden geyn genöäl med wark, sociale verplichtings en ouk mar möilike gevölens. Töt dat eyne van ear sea dat een stükkyn land -wat hee ümtüned had- van hüm was en geyne anders. Toon is et gedunder begünt.
 
 {{Dialekt|sdz}}
