*Empty MediaWiki Message*

--- a/Utopie.mw
+++ b/Utopie.mw
@@ -1,4 +1,4 @@
-'''Utopy''' is een term dat vöärkümt in de [[Literatuur|skryverye]] en de [[Filesefie|leavensbeskouwing]]. Et wörd ümskreaven as een ''unmöägelike warkelikheid'', ofwal een wearld dee heylemåle good is, mar noit warkelik sol künnen bestån. Et teagenoavergestelde van utopy is [[dystopy]].
+'''Utopy''' is een term dat vöärkümt in de [[Literatuur|skryverye]] en de [[Filesefie|leavensbeskouwing]]. Et wörd ümskreaven as een ''unmöägelike warkelikheid'', ofwal een wearld dee heylemåle good is, mar noit in et echt sol künnen bestån. Et teagenoavergestelde van utopy is [[dystopy]].
 
 Et woord kümt uut et greeksk en hevt een vöärvoogsel wat y dubbel gebruken künt: ''ou-topos'' beteakend een neet-bestånde plaatse, én eu-topos beteskend een ''gode en gelükkige samenleaving''.
 
