*Empty MediaWiki Message*

--- a/Utopie.mw
+++ b/Utopie.mw
@@ -1,6 +1,6 @@
 '''Utopy''' is een term dat vöärkümt in de [[Literatuur|skryverye]] en de [[Filesefie|leavensbeskouwing]]. Et wörd ümskreaven as een ''unmöägelike warkelikheid'', ofwal een wearld dee heylemåle good en mooi is, mar noit in et echt sol künnen bestån. Et teagenoavergestelde van utopy is [[dystopy]].
 
-Et woord kümt uut et greeksk en hevt een vöärvoogsel wat y dubbel gebruken künt: ''ou-topos'' beteakend een neet-bestånde plaatse, én eu-topos beteskend een ''gode en gelükkige samenleaving''.
+Et woord kümt uut et [[Grieks|greeksk]] en hevt een vöärvoogsel wat y dubbel gebruken künt: ''ou-topos'' beteakend een neet-bestånde plaatse, én eu-topos beteskend een ''gode en gelükkige samenleaving''.
 
 In de meyste skryverye -vöäral [[Sir Thomas More]] med syn book Utopia, den as de term ouk bedached hevt- is een samenleaving dat in een utopy levt, in de tookumts, wår as de technology et menskvolk gelykwaerdig is, alle hüse en stråten bint etsülvde en geyne hevt een eigen eigendom. Vake düs arg [[socialisme|socialistisk]] en [[communisme|kommunistisk]]. Mar y hebt der ouk wal wat skryvers by, dee as een wearld beskreavden hebbet dee in et verleaden is. So as [[Jean-Jacques Rousseau]], den hümsülv vöärstellen dat mensken vroager leavden as gelyke an andere deren. Dee mensken hadden geyn genöäl med wark, sociale verplichtings en ouk mar möilike gevölens. Töt dat eyne van ear sea dat een stükkyn land -wat hee ümtüned had- van hüm was en geyne anders. Toon is et gedunder begünt.
 
