*Empty MediaWiki Message*

--- a/Utopie.mw
+++ b/Utopie.mw
@@ -5,3 +5,6 @@ Et woord kümt uut et [[Grieks|greeksk]] en hevt een vöärvoogsel wat y dubbel 
 In de meyste skryverye -vöäral [[Sir Thomas More]] med syn book [[Utopia (book)|Utopia]] uut 1516, den as de term ouk bedached hevt- is een samenleaving dat in een utopy levt in de tookumts, wår as de technology et menskvolk gelykwaerdig hevt emaked, alle hüse en stråten bint etsülvde en geyne hevt een eigen eigendom. Vake düs arg [[socialisme|socialistisk]] en [[communisme|kommunistisk]]. Mar y hebt der ouk wal wat skryvers by, dee as een wearld beskreaven hebbet dee in et verleaden is. So as [[Jean-Jacques Rousseau]], den hümsülv vöärstellen dat mensken vroager leavden as gelyke an andere deren. Dee mensken hadden geyn genöäl med wark, sociale verplichtings en ouk mar möilike gevölens. Töt dat eyne van ear sea dat een stükkyn land -wat hee ümtüned had- van hüm was en geyne anders. Toon is et gedunder begünt.
 
 {{Dialekt|sdz}}
+
+[[Kategorie:filosofie]]
+[[Kategorie:Literatuur]]
