--- a/Utopie.mw
+++ b/Utopie.mw
@@ -1,8 +1,8 @@
-'''Utopy''' is een term dat vöärkümt in de [[Literatuur|skryverye]] en de [[Filesefie|leavensbeskouwing]]. Et wörd ümskreaven as een ''unmöägelike warkelikheid'', ofwal een wearld dee heylemåle good en mooi is, mar noit in et echt sol künnen bestån. Et teagenoavergestelde van utopy is [[dystopy]].
+'''Utopie''' is een term dat veurkump in de [[Literatuur|skrieveri-je]] en de [[Filesefie|leavensbeskouwing]]. Et wörd umskreaven as een ''onmeugelike warkelikheid'', ofwal een weerld die helemoale goed en mooi is, mar nooit in et echt zol kunnen bestoan. Et teagenoavergestelde van utopie is [[dystopy|dystopie]].
 
-Et woord kümt uut et [[Grieks|greeksk]] en hevt twey vöärvoogsels, wat twey beteakenissen geavet, mar wat in disse term samenkümt: ''ou-topos'' beteakend een ''neet-bestånde plaatse'', én eu-topos beteakend een ''gode en gelükkige samenleaving''.
+Et woord kump uut et [[Grieks|grieksk]] en hef twee veurvoegsels, wat twee betekkenissen geeft, mar wat in disse term samenkump: ''ou-topos'' betekkend een ''niet-bestoande plaatse'', én eu-topos betekkend een ''goeie en gelukkige samenleaving''.
 
-In de meyste skryverye -vöäral [[Sir Thomas More]] med syn book [[Utopia (book)|Utopia]] uut 1516, den as de term ouk bedached hevt- is een samenleaving dat in een utopy levt, in de tookumts; wår as de technology et menskvolk gelykwaerdig emaked hevt, alle hüse en stråten bint etsülvde en geyne hevt een eigen eigendom. Vake düs arg [[socialisme|socialistisk]] en [[communisme|kommunistisk]]. Mar y hebt der ouk wal wat skryvers by, dee as een wearld beskreaven hebbet dee in et verleaden is. So as [[Jean-Jacques Rousseau]], den hümsülv vöärstellen dat mensken vroager leavden as gelyke an andere deren. Dee mensken hadden geyn genöäl med wark, sociale verplichtings of ouk mar möilike gevölens. Töt dat eyne van ear sea dat een stükkyn land -wat hee ümtüned had- van hüm was en geyne anders. Toon is et gedunder begünt.
+In de meeste skrieveri-je -veural [[Sir Thomas More]] met zien boek [[Utopia (book)|Utopia]] uut 1516, den as de term ok bedacht hef- is een samenleaving dat in een utopie lef, in de tookomps; woar as de technologie et meansvolk geliekweerdig emaakt hef, alle huze en stroaten bint etzölfde en giene hef een eigen eigendom. Vake dus arg [[socialisme|socialistich]] en [[communisme|kommunistisch]]. Mar ie hebt der ok wal wat skrievers bi-j, die as een weerld beskreven hebt die in et verlidden is. zo as [[Jean-Jacques Rousseau]], den humzölf veurstellen dat meansen vrogger leafden as gelieke an aandere dieren. Die meansen hadden gien genöal met wark, sociale verplichtings of ok mar muuilike gevulens. Töt dat iene van eer zee dat een stukkien laand -wat 'e umtuunt har- van hum was en giene aans. Toe is et gedonder begunt.
 
 {{Dialekt|sdz}}
 [[Kategorie:Literatuur]]
