*Empty MediaWiki Message*

--- a/Utopie.mw
+++ b/Utopie.mw
@@ -1,8 +1,8 @@
 '''Utopie''' is een term dat veurkump in de [[Literatuur|skrieveri-je]] en de [[Filesefie|leavensbeskouwing]]. Et wörd umskreaven as een ''onmeugelike warkelikheid'', ofwal een weerld die helemoale goed en mooi is, mar nooit in et echt zol kunnen bestoan. Et teagenoavergestelde van utopie is [[dystopy|dystopie]].
 
-Et woord kump uut et [[Grieks|grieksk]] en hef twee veurvoegsels, wat twee betekkenissen geeft, mar wat in disse term samenkump: ''ou-topos'' betekkend een ''niet-bestoande plaatse'', én eu-topos betekkend een ''goeie en gelukkige samenleaving''.
+Et woord kump uut et [[Grieks|Grieksk]] en hef twee veurvoegsels, wat twee betekkenissen geeft, mar wat in disse term samenkump: ''ou-topos'' betekkend een ''niet-bestoande plaatse'', én eu-topos betekkend een ''goeie en gelukkige samenleaving''.
 
-In de meeste skrieveri-je -veural [[Sir Thomas More]] met zien boek [[Utopia (book)|Utopia]] uut 1516, den as de term ok bedacht hef- is een samenleaving dat in een utopie lef, in de toekomps; woar as de technologie et meansvolk geliekweerdig emaakt hef, alle huze en stroaten bint etzölfde en giene hef een eigen eigendom. Vake dus arg [[socialisme|socialistich]] en [[communisme|kommunistisch]]. Mar ie hebt der ok wal wat skrievers bi-j, die as een weerld beskreven hebt die in et verlidden is. zo as [[Jean-Jacques Rousseau]], den humzölf veurstellen dat meansen vrogger leafden as gelieke an aandere dieren. Die meansen hadden gien genöal met wark, sociale verplichtings of ok mar muuilike gevulens. Töt dat iene van eer zee dat een stukkien laand -wat 'e umtuunt har- van hum was en giene aans. Toe is et gedonder begunt.
+In de meeste skrieveri-je -veural [[Sir Thomas More]] met zien boek [[Utopia (book)|Utopia]] uut 1516, den as de term ok bedacht hef- is een samenleaving dat in een utopie lef, in de toekomps; woar as de technologie et meansvolk geliekweerdig emaakt hef, alle huze en stroaten bint etzölfde en giene hef een eigen eigendom. Vake dus arg [[socialisme|socialistisk]] en [[communisme|kommunistisk]]. Mar ie hebt der ok wal wat skrievers bi-j, die as een weerld beskreven hebt die in et verlidden is. zo as [[Jean-Jacques Rousseau]], den humzölf veurstellen dat meansen vrogger leafden as gelieke an aandere dieren. Die meansen hadden gien genöal met wark, sociale verplichtings of ok mar muuilike gevulens. Töt dat iene van eer zee dat een stukkien laand -wat 'e umtuunt har- van hum was en giene aans. Toe is et gedonder begunt.
 
 {{Dialekt|sdz}}
 [[Kategorie:Literatuur]]
