*Empty MediaWiki Message*

--- a/Jean-Jacques_Rousseau.mw
+++ b/Jean-Jacques_Rousseau.mw
@@ -1,9 +1,9 @@
-'''Jean-Jacques Rousseau''' ([[Genève]], [[28 juni]] [[1712]] - [[Ermenonville]], [[2 juli]] [[1778]]) was 'n belangrieke [[filosofie|filesoof]] en skriever. Hi'j hef 'n groten bi'jdrage levert an de skrieveri'je, pedagogiek en poletiek. 
+'''Jean-Jacques Rousseau''' ([[Genève]], [[28 juni]] [[1712]] - [[Ermenonville]], [[2 juli]] [[1778]]) was een belangrieke [[filosofie|filosoof]] en skriever. Hi-j hef een grote biejdrage edoane an de skrieveri-je, opvoedingskunde en politiek. 
 
-Rousseau wörn in 1712 geboren as iene van 'n horlogemaker in 't calvinistiese Genève. Zien moe störf bi'j de bevalling en zien vaar stuurden hum as leerjonk naor kennissen. Rousseau besleut vort te lopen en vönnen onderdak bi'j ne 29 jaorige rieke dame. Disse Françoise-Louise de Warens bekeerden Rousseau töt 't katholicisme. Hi'j wörn heur minnaar en töt zien 28e woonden he of en an bi'j Françoise-Louise. Zi'j regelden ok 'n portie baanties veur hum.
+Rousseau wödden in 1712 geboren as iene van 'n horlogemaker in 'e calvinistiske Genève. Ziene moe störf bi-j de bevalling en zien vaar stuurden hum as leerjonk noar kennissen. Rousseau besleut vort te lopen en vunden onderdak biej ne 29 joarige rieke dame. Disse Françoise-Louise de Warens bekeerden Rousseau töt 't katholicisme. Hi-j wörden heur minnaar en töt zien 28e wonden he of en an biej Françoise-Louise. Zi-j regelden ok 'n portie baantiens veur hum.
 
 ===Skrieftalent===
-Rousseau bleken talent te hemmen veur skrieven. In 1750 leerden Rousseau [[Nicolas de Condorcet]] kennen. Hi'j können metwarken an zien projekt, 't skrieven van de [[Encyclopédia]]. In 'tzölfde jaor braak he in intellektuele kringe deur met 'n essay de ''[[Discours sur l'origine et les fondements de l'inégalité parmi les hommes|Vertoog over de ongelijkheid]]''. 'n Alderbest deel van zien ideen deud Rousseau op toe he in 1743 warkten as privé-secretaris van 'n Fraanse ambassadeur in Venetië. Hi'j heulden die bane nie laank völ, binnen 't jaor was he met ruuzie vertrökken. Rousseau skreef over die periode:
+Rousseau bleken talent te hebben veur skrieven. In 1750 leerden Rousseau [[Nicolas de Condorcet]] kennen. Hee konden metwarken an zien projekt, 't skrieven van de [[Encyclopédia]]. In 'tzölfde jaor braak he in intellektuele kringe deur met 'n essay de ''[[Discours sur l'origine et les fondements de l'inégalité parmi les hommes|Vertoog over de ongelijkheid]]''. 'n Alderbest deel van zien ideen deud Rousseau op toe he in 1743 warkten as privé-secretaris van 'n Fraanse ambassadeur in Venetië. Hi'j heulden die bane nie laank völ, binnen 't jaor was he met ruuzie vertrökken. Rousseau skreef over die periode:
 * ''In Venetië zaa-k veur 't eersten met eangn oongn de tekörtskietings van 'n regering (…). Sund toe he-k 't benul dat aals stark ofhangt van de poletiek en dat (…) 'n volk nooit meer kan ween as wat zien regering der van maakt. De groten vraog is derumme dissent: wölke regeringsvörme is 't best um de meest deugdzame, verlichte en goede meansen veurt te brengn.”
 
 ===Edele weelden===
