--- a/Utopie.mw
+++ b/Utopie.mw
@@ -2,7 +2,7 @@
 
 Et woord kump uut et [[Grieks|Grieksk]] en hef twee veurvoegsels, wat twee betekkenissen geeft, mar wat in disse term samenkump: ''ou-topos'' betekkend een ''niet-bestoande plaatse'', én eu-topos betekkend een ''goeie en gelukkige samenleaving''.
 
-In de meeste skrieveri-je -veural [[Sir Thomas More]] met zien boek [[Utopia (book)|Utopia]] uut 1516, den as de term ok bedacht hef- is een samenleaving dat in een utopie lef, in de toekomps; woar as de technologie et meansvolk geliekweerdig emaakt hef, alle huze en stroaten bint etzölfde en giene hef een eigen eigendom. Vake dus slim [[socialisme|socialistisk]] en [[communisme|kommunistisk]]. Mar ie hebt der ok wal wat skrievers bi-j die as zo'n weerld beskreven hebt die in et verlidden is. Zo as [[Jean-Jacques Rousseau]], den humzölf veurstellen dat meansen vrogger leafden as gelieke an aandere dieren. Die meansen hadden gien geneul met wark, sociale verplichtings of ok mar muuilike gevulens. Töt dat iene van eer zee dat een stukkien laand -wat 'e umtuunt har- van hum was en giene aans. Toe is et gedonder begunt.
+In de meeste skrieveri-je -veural [[Sir Thomas More]] met zien boek [[Utopia (book)|Utopia]] uut 1516, den as de term ok bedacht hef- is een samenleaving dat in een utopie lef, in de toekomps; woar as de technologie et meansvolk geliekweerdig emaakt hef, alle huze en stroaten bint etzölfde en giene hef een eigen eigendom. Vake dus slim [[socialisme|socialistisk]] en [[communisme|kommunistisk]]. Mar ie hebt der ok wal wat skrievers bi-j die as zo'n weerld beskreven hebt die in et verlidden is. Zo as [[Jean-Jacques Rousseau]], den humzölf veurstellen dat meansen vrogger leafden as gelieke an aandere dieren. Die meansen hadden gien geneul met wark, sociale verplichtings of ok mar muuilike gevulens. Töt dat iene van eer zee dat een stukkien laand -wat 'e umtuunt haar- van hum waar, en giene aans. Toe is et gedonder begunt.
 
 {{Begin|Dit stukkien is een begunnegien, der kump nog meer}}
 
