--- a/Utopie.mw
+++ b/Utopie.mw
@@ -1,8 +1,8 @@
-'''Utopie''' is een term dat veurkump in de [[Literatuur|skrieveri-je]] en de [[Filesefie|leavensbeskouwing]]. Et wörd umskreaven as een ''onmeugelike warkelikheid'', ofwal een weerld die helemoale goed en mooi is, mar nooit in et echt zol bestoan kunnen. Et teagenoavergestelde van utopie is [[dystopy|dystopie]].
+'''Utopy''' is een term dat vöärkümt in de [[Literatuur|skryverye]] en de [[Filesefie|leavensbeskouwing]]. Et wörd ümskreaven as een ''unmöägelike warkelikheid'', ofwal een wearld dee heylemåle good en mooi is, mar noit in et echt sol bestån künnen. Et teagenoavergestelde van utopy is [[dystopy|dystopy]].
 
-Et woord kump uut et [[Grieks|Grieksk]] en hef twee veurvoegsels, wat twee betekkenissen geeft, mar wat in disse term samenkump: ''ou-topos'' betekkend een ''niet-bestoande plaatse'', én eu-topos betekkend een ''goeie en gelukkige samenleaving''.
+Et woord kümt uut et [[Grieks|greeksk]] en hevt twey vöärvoigsels, wat twey beteakenissen geavet, mar wat in disse term samenkümt: ''ou-topos'' beteakend een ''neet-bestånde plaatse'', én eu-topos beteakend een ''gode en gelükkige samenleaving''.
 
-In de meeste skrieveri-je -veural [[Sir Thomas More]] met zien boek [[Utopia (book)|Utopia]] uut 1516, den as de term ok bedacht hef- is een samenleaving dat in een utopie lef, in de toekomps; woar as de technologie et meansvolk geliekweerdig emaakt hef, alle huze en stroaten bint etzölfde en giene hef een eigen eigendom. Vake dus slim [[socialisme|socialistisk]] en [[communisme|kommunistisk]]. Mar ie hebt der ok wal wat skrievers bi-j die as zo'n weerld beskreven hebt die in et verlidden is. Zo as [[Jean-Jacques Rousseau]], den humzölf veurstellen dat meansen vrogger leafden as gelieke an aandere dieren. Die meansen hadden gien geneul met wark, sociale verplichtings of ok mar muuilike gevulens. Töt dat iene van eer zee dat een stukkien laand -wat 'e umtuunt haar- van hum waar, en giene aans. Toe is et gedonder begunt.
+In de meyste skryverye -vöäral [[Sir Thomas More]] med syn book [[Utopia (book)|Utopia]] uut 1516, den as de term ouk bedached hevr- is een samenleaving dat in een utopy levt, in de tookumts; wår as de technology et menskvolk gelykwaerdig emaked hevt, alle hüse en stråten bint etsülvde en geyne hevt een eigen eigendom. Vake düs slim [[socialisme|socialistisk]] en [[communisme|kommunistisk]]. Mar y hebt der ouk wal wat skryvers by dee as so'n wearld beskreaven hebbed dee in et verleaden is. So as [[Jean-Jacques Rousseau]], den hümsülv vöärstelden dat mebsken vroager leaveden as gelyke an andere deren. Dee mensken hadden geyn genöäl med wark, sociale verplichtings of ouk mar möilike gevölens. Töt dat eyne van ear sea dat een stükkyn land -wat hee ümtüünt har- van hüm war, en geyne anders. Toon is et gedunder begünt.
 
 {{Begin|Dit stukkien is een begunnegien, der kump nog meer}}
 
