*Empty MediaWiki Message*

--- a/Ynys_Môn.mw
+++ b/Ynys_Môn.mw
@@ -1,3 +1,3 @@
-'''Ynys Môn''' ([[ingelsk]]: ''Anglesey'') is en eiland an de noordwestküste van [[Kymrien]] un ouk dat grötste eiland van Kymrien.
+'''Ynys Môn''' ([[ingelsk]]: ''Anglesey'') is en eiland an de noordwestküste van [[Kymrien]] un ouk dat grötste eiland van Kymrien. Med en lütter eiland [[Ynys Gybi]] vormt dat en administratiiv graafskap fan Ynys Môn.
 
 {{Dialekt|nns||Nysassiske Skryvwyse}}
