*Empty MediaWiki Message*

--- a/Bargen_op_Zoom.mw
+++ b/Bargen_op_Zoom.mw
@@ -1,3 +1,24 @@
+{{Gemeante |
+bestaandsnaam vlagge = |Bergen_op_Zoom_vlag.svg
+bestaandsnaam woapn = Bergen_op_Zoom_wapen.svg |
+naam = Bargen op Zoom |
+lokatie = NL_-_locator_map_municipality_code_GM0748_(2016).png |
+proveensie = [[Noord-Braobant|Noord-Bråbant]] |
+heufdplaats = [[Bargen op Zoom (stad)|Bargen op Zoom]] | 
+öppervlakte = 93,13 |
+öppervlakte laand = 80,04  |
+öppervlakte water = 13,09 |
+inwonners = 66.426 |
+doatum inwonners = 31 mei 2018 |
+dichtheid = 830 |
+breedtegroad = 51/04//N |
+lengtegroad = 5/30//E |
+verkeersoader = [[A4]], [[A58]], [[N259]] |
+netnummer = 0164 |
+postkode = 4600-4625, 4661, 4664 |
+webstie = [http://www.bergenopzoom.nl/ www.bergenopzoom.nl] |
+}}
+
 '''Bargen op Zoom''' ([[Nederlaands|neaderlandsk]]: ''Bergen op Zoom'') is ne [[gemeente|gemeende]] in de [[Nederlaand|Neaderlandske]] provincy [[Noord-Braobant|Noord-Bråbant]]. Der woanet 66.426 lüde (telled up [[31 mei]] [[2018]]) up ne vlakte van 93,13 km². De höövdstad is de lyknamige stad [[Bargen op Zoom (stad)|Bargen op Zoom]].
 
 == Kerne ==
