--- a/Bargen_op_Zoom.mw
+++ b/Bargen_op_Zoom.mw
@@ -1,6 +1,6 @@
 {{Gemeante |
-bestaandsnaam vlagge = [[Bestaand:Bergen_op_Zoom_vlag.svg|130px|Gemeendevlagge]]| 
-bestaandsnaam woapn = [[Bestaand:Bergen_op_Zoom_wapen.svg|130px|gemeendewåpen]] |
+bestaandsnaam vlagge = [[Bestaand:Bergen_op_Zoom_vlag.svg]]| 
+bestaandsnaam woapn = [[Bestaand:Bergen_op_Zoom_wapen.svg]] |
 naam = Bargen op Zoom |
 lokatie = NL_-_locator_map_municipality_code_GM0748_(2016).png |
 proveensie = [[Noord-Braobant|Noord-Bråbant]] |
