--- a/Utopie.mw
+++ b/Utopie.mw
@@ -1,8 +1,8 @@
-'''Utopy''' is een term dat vöärkümt in de [[Literatuur|skryverye]] en de [[Filesefie|leavensbeskouwing]]. Et wörd ümskreaven as een ''unmöägelike warkelikheid'', ofwal een wearld dee heylemåle good en mooi is, mar noit in et echt sol bestån künnen. Et teagenoavergestelde van utopy is [[dystopy|dystopy]].
+'''Utopy''' is een term dat vöärkümt in de [[Literatuur|skryverye]] en de [[Filesefie|leavensbeskouwing]]. Et wörd ümskreaven as een ''unmöägelike warkelikheid'', ofwal een wearld dee heylemåle good en mooi is, mar noit in et echt sol bestån künnen. Et teagenoaverestelde van utopy is [[dystopy|dystopy]].
 
-Et woord kümt uut et [[Grieks|greeksk]] en hevt twey vöärvoigsels, wat twey beteakenissen geavet, mar wat in disse term samenkümt: ''ou-topos'' beteakend een ''neet-bestånde plaatse'', én eu-topos beteakend een ''gode en gelükkige samenleaving''.
+Et woord kümt uut et [[Grieks|greeksk]] en hevt twey vöärvoogsels, wat twey beteakenissen geavet, mar wat in disse term samenkümt: ''ou-topos'' beteakend een ''neet-bestånde plaatse'', én eu-topos beteakend een ''gode en gelükkige samenleaving''.
 
-In de meyste skryverye -vöäral [[Sir Thomas More]] med syn book [[Utopia (book)|Utopia]] uut 1516, den as de term ouk bedached hevr- is een samenleaving dat in een utopy levt, in de tookumts; wår as de technology et menskvolk gelykwaerdig emaked hevt, alle hüse en stråten bint etsülvde en geyne hevt een eigen eigendom. Vake düs slim [[socialisme|socialistisk]] en [[communisme|kommunistisk]]. Mar y hebt der ouk wal wat skryvers by dee as so'n wearld beskreaven hebbed dee in et verleaden is. So as [[Jean-Jacques Rousseau]], den hümsülv vöärstelden dat mebsken vroager leaveden as gelyke an andere deren. Dee mensken hadden geyn genöäl med wark, sociale verplichtings of ouk mar möilike gevölens. Töt dat eyne van ear sea dat een stükkyn land -wat hee ümtüünt har- van hüm war, en geyne anders. Toon is et gedunder begünt.
+In de meyste skryverye -vöäral [[Sir Thomas More]] med syn book [[Utopia (book)|Utopia]] uut 1516, den as de term ouk bedached hevt- is een samenleaving dat in een utopy levt, in de tookumts; wår as de technology et menskvolk gelykwaerdig emaked hevt, alle hüse en stråten bint etsülvde en geyne hevt een eigen eigendom. Vake düs slim [[socialisme|socialistisk]] en [[communisme|kommunistisk]]. Mar y hebt der ouk wal wat skryvers by dee as so'n wearld beskreaven hebbed dee in et verleaden is. So as [[Jean-Jacques Rousseau]], den hümsülv vöärstelden dat mensken vroager leaveden as gelyke an andere deren. Dee mensken hadden geyn genöäl med wark, sociale verplichtings of ouk mar möilike gevölens. Töt dat eyne van ear sea dat een stükkyn land -wat hee ümtüünt har- van hüm war, en geyne anders. Toon is et gedunder begünt.
 
 {{Begin|Dit stukkien is een begunnegien, der kump nog meer}}
 
