*Empty MediaWiki Message*

--- a/Kroezeboom.mw
+++ b/Kroezeboom.mw
@@ -18,7 +18,7 @@ Et geet nich aait evven good met den Kroezeboom. Umdat den boom begun te splitte
 Umdat et völle toeristen trekt en umdat der nog regelmoatig biejeenkomste höalden wordt, blif den boom ne belangrieke stea veur de umgewing. Um der nen boomchirurg bie te halen is geald neudig. Doarum hebt ze in Fleringen zölfs ne stichting opricht veur et behoald van den boom.<ref>[http://www.trouw.nl/tr/nl/5009/Archief/article/detail/2718739/1996/04/16/Twente-in-actie-voor-behoud-kroezeboom.dhtml Trouw.nl. ''Twente in actie voor behoud Kroezeboom.'' 16 april 1996.] Bekekken op 11 meart 2015.</ref>
 
 {{Commonscat|Kroezeboom, Fleringen}}
-{{References}}
+{{Bron}}
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Natuur]]
 [[Kategorie: Toerisme]]
