--- a/Bernheze.mw
+++ b/Bernheze.mw
@@ -2,7 +2,7 @@
 bestaandsnaam vlagge = [[File:Flag_of_Bernheze.svg|130px]]| 
 bestaandsnaam woapn = [[File:Coat_of_arms_of_Bernheze.svg|130px]]|
 naam = Bargen op Zoom |
-lokatie = NL_-_locator_map_municipality_code_GM1721_(2016).png |
+lokatie = [[file:NL_-_locator_map_municipality_code_GM1721_(2016).png|250px]] |
 proveensie = [[Noord-Braobant|Noord-Bråbant]] |
 heufdplaats = [[Heesch]] | 
 öppervlakte = 90,41 |
