--- a/Bernheze.mw
+++ b/Bernheze.mw
@@ -1,7 +1,7 @@
 {{Gemeante |
 bestaandsnaam vlagge = Flag_of_Bernheze.svg|130px| 
 bestaandsnaam woapn = Coat_of_arms_of_Bernheze.svg|130px|
-naam = Bargen op Zoom |
+naam = Bernhese |
 lokatie = NL_-_locator_map_municipality_code_GM1721_(2016).png|250px |
 proveensie = [[Noord-Braobant|Noord-Bråbant]] |
 heufdplaats = [[Heesch]] | 
