--- a/Bernheze.mw
+++ b/Bernheze.mw
@@ -48,7 +48,7 @@ Aantal inwoners de woankern op {{Statistiek woonplaats Nederland inwoners|TXT=Da
 <small>Bron: CBS</small>
 
 == Gemeendekaarte ==
-[[Bestaand:260px-Gem-Bernheze-OpenTopo.jpg|thumb|right|260px|Topografiske kaarte van Bernhese in [[2017]]]]
+[[File:260px-Gem-Bernheze-OpenTopo.jpg|thumb|right|260px|Topografiske kaarte van Bernhese in [[2017]]]]
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Gemeente in Noord-Braobant]]
