--- a/Bernheze.mw
+++ b/Bernheze.mw
@@ -52,3 +52,6 @@ Aantal inwoners de woankern op {{Statistiek woonplaats Nederland inwoners|TXT=Da
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Gemeente in Noord-Braobant]]
+
+[[nl:Bernheze]]
+[[en:Bernheze]]
