*Empty MediaWiki Message*

--- a/Dystopy.mw
+++ b/Dystopy.mw
@@ -1,4 +1,4 @@
 '''Dystopy''' is et teagenoavergestelde van [[Utopy]]. Düs een samenleaving of een ståt van de aerde wår as der niks geyn goods en moois te vinden is.
-Vöär sommige berskryvings van so een dystopy is et as der een diktatuur de baas is, of een samenleaving wår as aleyne mar robots en komputers de macht hebbet, wår as kuningryken up syn ende loupet, of wår as mensken verandered bint in sombys döär een seekte. 
+Vöär sommige berskryvings van so een dystopy is et as der een diktatuur de bås is, of een samenleaving wår as alleyne mar robots en komputers de macht hebbet, wår as kuningryken up syn ende loupet, of wår as mensken verandered bint in sombys döär een seekte. 
 
 {{Dialekt|sdz}}
