*Empty MediaWiki Message*

--- a/Ynys_Môn.mw
+++ b/Ynys_Môn.mw
@@ -1,3 +1,7 @@
+[[Bestaand:Anglesey_in_Wales.svg|thumb|Ligging van ''Ynys Môn'']]
+
 '''Ynys Môn''' ([[ingelsk]]: ''Anglesey'') is en eiland an de noordwestküste van [[Kymrien]] un ouk dat grötste eiland van Kymrien. Med en lütter eiland [[Ynys Gybi]] vormt dat de administratiiv graafskap van Ynys Môn.
 
 {{Dialekt|nns||Nysassiske Skryvwyse}}
+
+[[Kategorie:Verienigd Keuninkriek]]
