--- a/Bökkers.mw
+++ b/Bökkers.mw
@@ -1,5 +1,5 @@
 [[File:ZC16 Bökkers 3.jpg|thumb|Bökkers up de Zwarte Cross 2016.]]
-'''Bökkers''' is een (buren)rockband uut et [[Oaveriessel|oaverysselske]] [[Salland]], med as vöärman [[Hendrik Jan Bökkers]] (1977). De formaty is in 2010 begünt as [[coverbänd]] van de [[Achterhook|achterhookske]] grup [[Normaal]] under de name ''Bökkers Dut Normaal''. De band hevt nou ouk een eigen rye leedtys in et [[sallands]]ke dialekt eskreaven en espöäld. Wårmed se op sichsölv te stån kwamen. Lüde segt mangs dat Bökkers 'et nye Normaal' is.
+'''Bökkers''' is een (buren)rockband uut et [[Oaveriessel|oaverysselske]] [[Salland]], med as vöärman [[Hendrik Jan Bökkers]] (1977). De formaty is in 2010 begünt as [[coverbänd]] van de [[Achterhook|achterhookske]] grup [[Normaal]] under de name ''Bökkers Dut Normaal''. De band hevt nou ouk een eigen ryge leedtyns in et [[sallands]]ke dialekt eskreaven en espöäled. Wårmed se up sichsülv te stån kwamen. Lüde segget mangs dat Bökkers 'et nye Normaal' is.
 
 ==Bandleaden==
 * Hendrik Jan Bökkers (sang, gitare) 
